# PCCC

./: .gitignore  LICENSE  README.md  config.yaml  dpl.config  env.config  make  myenv.config  newConf.config  pyproject.toml  requirements.txt  task-generation-config.json
FilesystemsAPI/Interface/: EffectfulInterface.dfy  EffectfulInterfaceNative.cs  Helper.dfy
FilesystemsAPI/Standard-fileIO/: ReadBytes.dfy  ReadBytesFile.dfy  ReadBytesFromFile.cs  ReadBytesFromFile.dfy  WriteBytes.dfy
FilesystemsAPI/StandardFileIO/: FileIO.cs  FileIO.dfy  ReadBytes-cs.dtr  ReadBytes.cs  ReadBytes.csproj  ReadBytesFile.cs  ReadBytesFile.csproj  ReadBytesFile.dfy  Wrappers.dfy  WriteBytes  WriteBytes-cs.dtr  WriteBytes.cs  WriteBytes.csproj  input.txt
FilesystemsAPI/std/: FileIO.cs  utils.dfy  (+3 more)
benchmark/: another-unsafe.txt
dataset/: abs.dfy  copilot.py
filesystems-api/: find_substring_in_list.dfy
output/: generated_prompt.txt
pccc/: .gitignore  env.config  requirements.txt
pccc-venv/: pyvenv.cfg
playground/: join  join.cs  join.csproj  join.deps.json  join.dfy  module-test.dfy  private-test.dfy
src/: api_key.txt  generated_code.rs  main.py  prompt.txt  requirements.txt  setup.py
std/: Filesystem.cs  Filesystem.dfy
stdlib/: Filesystem.cs  Filesystem.dfy  Filesystem.java  interface_api.json
tasks/: task-6.json  task-7.json  task-8.json
templates/: task_requirement.json
tests/: rsa.py  targetLink  test-class.dfy
user_data/: alice.txt  bob.txt  charlie.txt  chmod +x charlie.txt  output.txt
utils/: code_generator.py  config_reader.py  json_parser.py  utils.py
(+1379 files in other folders)
