[project]
name = "pcc-lm"
version = "0.1.0"
authors = ["Caleb Stanford <cdstanford@ucdavis.edu>", "Parnian Kamran <pkamran@ucdavis.edu>"]
edition = "2021"
license = "MIT"
description = "(Placeholder) A proof carrying completion tool for generated codes by LLMs"
repository = "https://github.com/DavisPL/PCCC"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
"openai >= 1.3.7",
"async-timeout==4.0.2",
]